--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^4.4.5
+  image_picker: ^0.8.7+1
+  google_sign_in: ^6.0.2
+  firebase_storage: ^11.0.16
+  firebase_auth: ^4.3.0
+  firebase_core: ^2.8.0
+  intl: ^0.17.0
+  firebase_database: ^10.0.16
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
